
2012-01-07: Version 0.0.3d

- add PutEntry to EPG interface

2012-01-18: Version 0.0.3e

- epg.c: correct introspection data for PutEntry
- Makefile: add WANT_I18N (thanks to Christian Ruppert)
- Makefile: don't override "directory environment" (thanks to Christian Ruppert)

2012-01-26: Version 0.0.3f

- add new setup interface with "Set" and "Get" for selected parameters

2012-01-26: Version 0.0.3g

- add "List" to setup interface

2012-02-08: Version 0.0.3h

- add "AskUser" to remote interface

2012-02-19: Version 0.0.3i

- shutdown-wrapper is a wrapper which tests the shutdown-hooks
  set its SUID bit if needed

2012-02-23: Version 0.0.3j

- add "Now" and "Next" to EPG interface

2012-03-07: Version 0.0.3k

- add "DisableScanner" and "EnableScanner" to EPG interface

2012-03-08: Version 0.0.4

- add OSD interface

2012-03-10: Version 0.0.4a

- add "CreateProvider" and "DeleteProvider" to OSD interface

2012-03-11: Version 0.0.4b

- adapt to vdr 1.7.26 and add missing symbol

2012-04-04: Version 0.0.4c

- accept multiple keys with "HitKey"

2012-04-12: Version 0.0.4d

- add "At" to EPG interface

2012-04-19: Version 0.0.5
- add "CurrentSkin" and "ListSkins" to Skin interface

2012-04-26: Version 0.0.6
- send upstart signals for every plugin on startup and stopping

2012-04-26: Version 0.0.6a
- use a DBus method call for Upstart, not a DBus signal

2012-04-28: Version 0.0.6b
- emit only one Upstart event for all plugins

2012-05-02: Version 0.0.6c
- emit Upstart signal only if activated and send a SIGSTOP

2012-05-13: Version 0.0.6d
- if dbus disconnects try to reconnect to system bus

2012-05-15: Version 0.0.6e
- add support for getting/setting plugin parameters in the setup.conf

2012-05-23: Version 0.0.6f
- correct parameter parsing of epg.PutEntry and remote.AskUser

2012-05-23: Version 0.0.6g
- add "Del" to setup interface

2012-05-23: Version 0.0.7
- output all plugin settings with setup.List