@@ -471,10 +471,32 @@ void cDBusMessageSetup::Set(void)
 
 void cDBusMessageSetup::Del(void)
 {
-  char *name = NULL;
+  const char *name = NULL;
   if (!dbus_message_get_args(_msg, NULL, DBUS_TYPE_STRING, &name, DBUS_TYPE_INVALID)) {
      esyslog("dbus2vdr: %s.Del: message misses an argument for the name", DBUS_VDR_SETUP_INTERFACE);
      cDBusHelper::SendReply(_conn, _msg, 501, "message misses an argument for the name");
+     return;
+     }
+
+  isyslog("dbus2vdr: %s.Del: %s", DBUS_VDR_SETUP_INTERFACE, name);
+
+  if (endswith(name, ".*")) {
+     // delete all plugin settings
+     char *plugin = strdup(name);
+     plugin[strlen(name) - 2] = 0;
+     cSetupLine *line = Setup.First();
+     cSetupLine *next;
+     while (line) {
+           next = Setup.Next(line);
+           if ((line->Plugin() != NULL) && (strcasecmp(line->Plugin(), plugin) == 0)) {
+              isyslog("dbus2vdr: %s.Del: deleting %s.%s = %s", DBUS_VDR_SETUP_INTERFACE, line->Plugin(), line->Name(), line->Value());
+              Setup.Del(line);
+              }
+           line = next;
+           }
+     Setup.Save();
+     cDBusHelper::SendReply(_conn, _msg, 900, *cString::sprintf("deleted all settings for plugin %s", plugin));
+     free(plugin);
      return;
      }
 
